@startuml

title __ACTIVITIES's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace activities {
      class com.fahadali.intranet.activities.AttendanceRegistrationActivity {
          {static} - TAG : String
          - afterScanMark : ImageView
          - checkMark : ImageView
          - checkType : int
          - correctClassRoom : boolean
          - crossMark : ImageView
          - infoText : TextView
          - lessonId : int
          - nfcAdapter : NfcAdapter
          - postBtn : Button
          - read : boolean
          - readNotification : TextView
          - roomId : String
          - spinKitBeforeCheckIn : SpinKitView
          - tagContentTextView : TextView
          - tagId : String
          {static} + byteArrayToHex()
          + getTextFromNdefRecord()
          + onClick()
          + onPointerCaptureChanged()
          # onCreate()
          # onNewIntent()
          # onPause()
          # onResume()
          # onStart()
          - checkNfcAvailablity()
          - createNdefMessage()
          - disableForegroundDispatchSystem()
          - enableForegroundDispatchSystem()
          - formatTag()
          - getCheckType()
          - getMessage()
          - postAttendance()
          - readTextFromTag()
          - showCheckInSuccesfullUi()
          - showCorrectRoomUi()
          - showWrongRoomUi()
          - validateRoom()
          - writeNdefMessage()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace activities {
      class com.fahadali.intranet.activities.LoginActivity {
          - TAG : String
          - loginBtn : Button
          - password : EditText
          - progressBar : ProgressBar
          - username : EditText
          + manageToken()
          + onClick()
          # onCreate()
          - retrieveStudentData()
          - retrieveToken()
          - saveTokenLocally()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace activities {
      class com.fahadali.intranet.activities.Main2Activity {
          - drawer : DrawerLayout
          - emailDisplay : TextView
          - mAppBarConfiguration : AppBarConfiguration
          - navController : NavController
          - userNameDisplay : TextView
          + onCreateOptionsMenu()
          + onNavigationItemSelected()
          + onSupportNavigateUp()
          # onCreate()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace activities {
      class com.fahadali.intranet.activities.MainActivity {
          + onClick()
          # onCreate()
      }
    }
  }
  

  com.fahadali.intranet.activities.AttendanceRegistrationActivity .up.|> android.view.View.OnClickListener
  com.fahadali.intranet.activities.AttendanceRegistrationActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fahadali.intranet.activities.LoginActivity .up.|> android.view.View.OnClickListener
  com.fahadali.intranet.activities.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fahadali.intranet.activities.LoginActivity o-- com.fahadali.intranet.model.Token : token
  com.fahadali.intranet.activities.Main2Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fahadali.intranet.activities.MainActivity .up.|> android.view.View.OnClickListener
  com.fahadali.intranet.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
